overflow x fix

--- a/css/prism.css
+++ b/css/prism.css
@@ -146,14 +146,14 @@
 @media (max-width: 672px) {
   pre {
     margin-bottom: 1.75rem;
-    margin-left: -1.1725rem;
-    margin-right: -1.1725rem;
+    margin-left: -1.8725rem;
+    margin-right: -1.8725rem;
     border-radius: 0 !important;
   }
 
   .remark-code-title {
-    margin-left: -1.1725rem;
-    margin-right: -1.1725rem;
+    margin-left: -1.8725rem;
+    margin-right: -1.8725rem;
     border-radius: 0;
   }
 }
